benötigte scheiben werden richtig angeziegt